--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@uiw/react-md-editor": "^4.0.4",
+    "i18next": "^25.0.1",
     "jsdom": "^26.1.0",
     "marked": "^12.0.2",
     "next": "15.3.1",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
