--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buity-create",
+  "name": "markdown-refiner",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "@langchain/openai": "^0.0.28",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/material-nextjs": "^7.0.2",
     "@uiw/react-md-editor": "^4.0.4",
     "i18next": "^25.0.1",
     "jsdom": "^26.1.0",
